kube/base/account.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account
spec:
  replicas: 1
  selector:
    matchLabels:
      app: account
  template:
    metadata:
      labels:
        app: account
    spec:
      containers:
        - name: account-container
          image: acrekstest.azurecr.io/azure-account-microservice:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: 300Mi
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /api/v1/actuator/info
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 20
            successThreshold: 1
          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /api/v1/actuator/health
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
            successThreshold: 1
          volumeMounts:
            - name: configmap-account-volume
              mountPath: /resources-config
      volumes:
        - name: configmap-account-volume
          configMap:
            name: configmap-account
---
apiVersion: v1
kind: Service
metadata:
  name: account
spec:
  selector:
    app: account
  ports:
    - port: 80
      targetPort: 80
