kube/base/authorization.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authorization
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authorization
  template:
    metadata:
      labels:
        app: authorization
    spec:
      containers:
        - name: authorization-container
          image: acrekstest.azurecr.io/azure-authorization-microservice:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          resources:
            limits:
              memory: 300Mi
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /uaa/actuator/info
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 20
            successThreshold: 1
          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /uaa/actuator/health
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
            successThreshold: 1
          volumeMounts:
            - name: configmap-authorization-volume
              mountPath: /resources-config
      volumes:
        - name: configmap-authorization-volume
          configMap:
            name: configmap-authorization
---
apiVersion: v1
kind: Service
metadata:
  name: authorization
spec:
  selector:
    app: authorization
  ports:
    - port: 80
      targetPort: 5000
