kube/base/notification.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification
  template:
    metadata:
      labels:
        app: notification
    spec:
      containers:
        - name: notification-container
          image: acrekstest.azurecr.io/azure-notification-microservice:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          resources:
            limits:
              memory: 300Mi
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /notifications/actuator/info
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 20
            successThreshold: 1
          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /notifications/actuator/health
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
            successThreshold: 1
          volumeMounts:
            - name: configmap-notification-volume
              mountPath: /resources-config
      volumes:
        - name: configmap-notification-volume
          configMap:
            name: configmap-notification
---
apiVersion: v1
kind: Service
metadata:
  name: notification
spec:
  selector:
    app: notification
  ports:
    - port: 80
      targetPort: 8000
