kube/base/rabbitmq.yml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  selector:
    app: rabbitmq
  ports:
    - name: http
      protocol: TCP
      port: 15672
      targetPort: http
    - name: amqp
      protocol: TCP
      port: 5672
      targetPort: amqp
    - name: epmd
      protocol: TCP
      port: 4369
      targetPort: epmd
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rabbitmq
  labels:
    app: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  serviceName: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3.8.9-management
          imagePullPolicy: IfNotPresent
          lifecycle:
            postStart:
              exec:
                command: ['sh', '-c', 'set -ex; apt-get update -y; apt install ca-certificates -y; apt-get install wget -y;']
          ports:
            - containerPort: 15672
              name: http
            - containerPort: 5672
              name: amqp
            - containerPort: 15692
              name: prometheus
          livenessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - 'wget -O - -q --header "Authorization: Basic `echo -n \"$RABBITMQ_USERNAME:$RABBITMQ_PASSWORD\"
                | base64`" http://localhost:15672/api/healthchecks/node | grep -qF "{\"status\":\"ok\"}"'
            failureThreshold: 6
            initialDelaySeconds: 120
            periodSeconds: 10
            timeoutSeconds: 5
          readinessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - 'wget -O - -q --header "Authorization: Basic `echo -n \"$RABBITMQ_USERNAME:$RABBITMQ_PASSWORD\"
                | base64`" http://localhost:15672/api/healthchecks/node | grep -qF "{\"status\":\"ok\"}"'
            failureThreshold: 6
            initialDelaySeconds: 20
            periodSeconds: 5
            timeoutSeconds: 3
          volumeMounts:
            - name: config
              mountPath: /etc/rabbitmq
            - name: definitions
              mountPath: /etc/definitions
              readOnly: true
            - name: data
              mountPath: /var/lib/rabbitmq
      volumes:
        - name: rabbitmq-config-map
          configMap:
            name: rabbitmq
        - name: config
          emptyDir: {}
        - name: definitions
          configMap:
            name: definitions-configmap
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: managed-premium
        resources:
          requests:
            storage: 1Gi
