kube/base/statistics.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: statistics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: statistics
  template:
    metadata:
      labels:
        app: statistics
    spec:
      containers:
        - name: statistics-container
          image: acrekstest.azurecr.io/azure-statistics-microservice:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: 300Mi
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /api/v1/actuator/info
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 20
            successThreshold: 1
          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /api/v1/actuator/health
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
            successThreshold: 1
          volumeMounts:
            - name: configmap-statistics-volume
              mountPath: /resources-config
      volumes:
        - name: configmap-statistics-volume
          configMap:
            name: configmap-statistic
---
apiVersion: v1
kind: Service
metadata:
  name: statistic
spec:
  selector:
    app: statistics
  ports:
    - port: 80
      targetPort: 80
