kube/base/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-gateway
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - http:
        paths:
          - path: /notifications/.*
            backend:
              serviceName: notification
              servicePort: 80
          - path: /statistics/.*
            backend:
              serviceName: statistic
              servicePort: 80
          - path: /accounts/.*
            backend:
              serviceName: account
              servicePort: 80
          - path: /oauth/.*
            backend:
              serviceName: authorization
              servicePort: 80
